frontend/test/should_pass/computations_sincostan.grg
function foo() : double
{
	def var temp1:double = Math::sin(Math::pi());
	def var temp2:double = Math::cos(0.0);
	def var temp3:double = Math::tan(0.0);
	return(temp1+temp2+temp3);
}

test t : (double)
{
	def var res:double;
	
	independent {
		yield {
			def var temp1:double = Math::sin(Math::pi());
			def var temp2:double = Math::cos(0.0);
			def var temp3:double = Math::tan(0.0);
			yield res = temp1+temp2+temp3;
		}
	}
	
	return (res);
}

rule r : (double)
{	
	if(Math::sin(Math::pi())+Math::cos(0.0) == Math::tan(0.0));
	
	modify {
		def var res:double;
		
		eval { 
			def var temp1:double = Math::sin(Math::pi());
			def var temp2:double = Math::cos(0.0);
			def var temp3:double = Math::tan(0.0);
			yield res = temp1+temp2+temp3;
		}
		
		return (res);
	}
}
