frontend/test/should_fail/computations_no_return_003.grg
rule r : (int, int)
{	
	modify {
		eval {
			return (0,1);
		}
		return (0,1);
	}
}
